--- a/tests/small_tests.ipynb
+++ b/tests/small_tests.ipynb
@@ -1,23 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "5+5\n"
+    "This notebook is for manual tests and won't be picked up by pytest"
    ]
   },
   {
